fix(style): fix subtexts vertical align

--- a/src/common/styles/variables/typography.css
+++ b/src/common/styles/variables/typography.css
@@ -44,12 +44,12 @@
 
   /* Feed Title */
   --font-size-feed-title: var(--font-size-xm);
-  --line-height-feed-title: 1.3333; /* 24/18 */
+  --line-height-feed-title: 1.3333333; /* 24/18 */
   --font-weight-feed-title: var(--font-weight-medium);
 
   /* Subtext: digest footer, datetime, etc. */
   --font-size-subtext: var(--font-size-xs);
-  --line-height-subtext: 1.3333; /* 16/12 */
+  --line-height-subtext: 1.3333333; /* 16/12 */
   --font-weight-subtext: var(--font-weight-normal);
 
   /* Article Title */
